Fixed left tab being clipped at the bottom

--- a/style.css
+++ b/style.css
@@ -161,6 +161,10 @@ h1, h2, h3, b, input {
 	cursor: pointer;
 }
 
+#treeTab {
+	height: calc(100% - 70px);
+	padding-bottom: 20px;
+}
 
 .back:hover {
 	transform: scale(1.1, 1.1);
